--- a/inventario/templates/inventario/seleccionar_grupo.html
+++ b/inventario/templates/inventario/seleccionar_grupo.html
@@ -17,10 +17,10 @@
             <label for="grupo">Número de Grupo:</label>
             <select id="grupo" name="grupo" required>
             <option value="">-- Selecciona Grupo --</option>
-            <option value="1">Grupo 1</option>
-            <option value="2">Grupo 2</option>
-            <option value="3">Grupo 3</option>
-            <option value="4">Grupo 4</option>
+            <option value="1">Grupo Richar</option>
+            <option value="2">Grupo Sandra</option>
+            <option value="3">Grupo Charly</option>
+            <option value="4">Grupo Roberto</option>
             </select>
             <div class="error" id="error-grupo">Este campo es obligatorio.</div>
         </div>
